// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hyphenateLimitLines renders 0 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-lines: 0;
  -moz-hyphenate-limit-lines: 0;
  -ms-hyphenate-limit-lines: 0;
  hyphenate-limit-lines: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: 0;
  -moz-hyphenate-limit-lines: 0;
  -ms-hyphenate-limit-lines: 0;
  hyphenate-limit-lines: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: 0;
  -moz-hyphenate-limit-lines: 0;
  -ms-hyphenate-limit-lines: 0;
  hyphenate-limit-lines: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: 0;
  -moz-hyphenate-limit-lines: 0;
  -ms-hyphenate-limit-lines: 0;
  hyphenate-limit-lines: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitLines renders function 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-lines: hasnot;
  -moz-hyphenate-limit-lines: hasnot;
  -ms-hyphenate-limit-lines: hasnot;
  hyphenate-limit-lines: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: has;
  -moz-hyphenate-limit-lines: has;
  -ms-hyphenate-limit-lines: has;
  hyphenate-limit-lines: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: hasnot;
  -moz-hyphenate-limit-lines: hasnot;
  -ms-hyphenate-limit-lines: hasnot;
  hyphenate-limit-lines: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: has;
  -moz-hyphenate-limit-lines: has;
  -ms-hyphenate-limit-lines: has;
  hyphenate-limit-lines: has;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitLines renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-lines: invalid.path.1;
  -moz-hyphenate-limit-lines: invalid.path.1;
  -ms-hyphenate-limit-lines: invalid.path.1;
  hyphenate-limit-lines: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: invalid.path.1;
  -moz-hyphenate-limit-lines: invalid.path.1;
  -ms-hyphenate-limit-lines: invalid.path.1;
  hyphenate-limit-lines: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: invalid.path.1;
  -moz-hyphenate-limit-lines: invalid.path.1;
  -ms-hyphenate-limit-lines: invalid.path.1;
  hyphenate-limit-lines: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: invalid.path.1;
  -moz-hyphenate-limit-lines: invalid.path.1;
  -ms-hyphenate-limit-lines: invalid.path.1;
  hyphenate-limit-lines: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitLines renders negative number 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-lines: -54881;
  -moz-hyphenate-limit-lines: -54881;
  -ms-hyphenate-limit-lines: -54881;
  hyphenate-limit-lines: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: -54881;
  -moz-hyphenate-limit-lines: -54881;
  -ms-hyphenate-limit-lines: -54881;
  hyphenate-limit-lines: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: -42365;
  -moz-hyphenate-limit-lines: -42365;
  -ms-hyphenate-limit-lines: -42365;
  hyphenate-limit-lines: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: -42365;
  -moz-hyphenate-limit-lines: -42365;
  -ms-hyphenate-limit-lines: -42365;
  hyphenate-limit-lines: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitLines renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-lines: July;
  -moz-hyphenate-limit-lines: July;
  -ms-hyphenate-limit-lines: July;
  hyphenate-limit-lines: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: September;
    -moz-hyphenate-limit-lines: September;
    -ms-hyphenate-limit-lines: September;
    hyphenate-limit-lines: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: July;
  -moz-hyphenate-limit-lines: July;
  -ms-hyphenate-limit-lines: July;
  hyphenate-limit-lines: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: September;
    -moz-hyphenate-limit-lines: September;
    -ms-hyphenate-limit-lines: September;
    hyphenate-limit-lines: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: January;
  -moz-hyphenate-limit-lines: January;
  -ms-hyphenate-limit-lines: January;
  hyphenate-limit-lines: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: December;
    -moz-hyphenate-limit-lines: December;
    -ms-hyphenate-limit-lines: December;
    hyphenate-limit-lines: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: April;
    -moz-hyphenate-limit-lines: April;
    -ms-hyphenate-limit-lines: April;
    hyphenate-limit-lines: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: May;
    -moz-hyphenate-limit-lines: May;
    -ms-hyphenate-limit-lines: May;
    hyphenate-limit-lines: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-limit-lines: June;
    -moz-hyphenate-limit-lines: June;
    -ms-hyphenate-limit-lines: June;
    hyphenate-limit-lines: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: January;
  -moz-hyphenate-limit-lines: January;
  -ms-hyphenate-limit-lines: January;
  hyphenate-limit-lines: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: December;
    -moz-hyphenate-limit-lines: December;
    -ms-hyphenate-limit-lines: December;
    hyphenate-limit-lines: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: April;
    -moz-hyphenate-limit-lines: April;
    -ms-hyphenate-limit-lines: April;
    hyphenate-limit-lines: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: May;
    -moz-hyphenate-limit-lines: May;
    -ms-hyphenate-limit-lines: May;
    hyphenate-limit-lines: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-limit-lines: June;
    -moz-hyphenate-limit-lines: June;
    -ms-hyphenate-limit-lines: June;
    hyphenate-limit-lines: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitLines renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: July;
    -moz-hyphenate-limit-lines: July;
    -ms-hyphenate-limit-lines: July;
    hyphenate-limit-lines: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: September;
    -moz-hyphenate-limit-lines: September;
    -ms-hyphenate-limit-lines: September;
    hyphenate-limit-lines: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: July;
    -moz-hyphenate-limit-lines: July;
    -ms-hyphenate-limit-lines: July;
    hyphenate-limit-lines: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: September;
    -moz-hyphenate-limit-lines: September;
    -ms-hyphenate-limit-lines: September;
    hyphenate-limit-lines: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: May;
    -moz-hyphenate-limit-lines: May;
    -ms-hyphenate-limit-lines: May;
    hyphenate-limit-lines: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: June;
    -moz-hyphenate-limit-lines: June;
    -ms-hyphenate-limit-lines: June;
    hyphenate-limit-lines: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: April;
    -moz-hyphenate-limit-lines: April;
    -ms-hyphenate-limit-lines: April;
    hyphenate-limit-lines: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: May;
    -moz-hyphenate-limit-lines: May;
    -ms-hyphenate-limit-lines: May;
    hyphenate-limit-lines: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: June;
    -moz-hyphenate-limit-lines: June;
    -ms-hyphenate-limit-lines: June;
    hyphenate-limit-lines: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-hyphenate-limit-lines: April;
    -moz-hyphenate-limit-lines: April;
    -ms-hyphenate-limit-lines: April;
    hyphenate-limit-lines: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitLines renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-lines: July;
  -moz-hyphenate-limit-lines: July;
  -ms-hyphenate-limit-lines: July;
  hyphenate-limit-lines: July;
}

@media May {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: September;
    -moz-hyphenate-limit-lines: September;
    -ms-hyphenate-limit-lines: September;
    hyphenate-limit-lines: September;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: July;
  -moz-hyphenate-limit-lines: July;
  -ms-hyphenate-limit-lines: July;
  hyphenate-limit-lines: July;
}

@media May {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: September;
    -moz-hyphenate-limit-lines: September;
    -ms-hyphenate-limit-lines: September;
    hyphenate-limit-lines: September;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: April;
  -moz-hyphenate-limit-lines: April;
  -ms-hyphenate-limit-lines: April;
  hyphenate-limit-lines: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: January;
    -moz-hyphenate-limit-lines: January;
    -ms-hyphenate-limit-lines: January;
    hyphenate-limit-lines: January;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-limit-lines: December;
    -moz-hyphenate-limit-lines: December;
    -ms-hyphenate-limit-lines: December;
    hyphenate-limit-lines: December;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: April;
    -moz-hyphenate-limit-lines: April;
    -ms-hyphenate-limit-lines: April;
    hyphenate-limit-lines: April;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-limit-lines: May;
    -moz-hyphenate-limit-lines: May;
    -ms-hyphenate-limit-lines: May;
    hyphenate-limit-lines: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: April;
  -moz-hyphenate-limit-lines: April;
  -ms-hyphenate-limit-lines: April;
  hyphenate-limit-lines: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: January;
    -moz-hyphenate-limit-lines: January;
    -ms-hyphenate-limit-lines: January;
    hyphenate-limit-lines: January;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-limit-lines: December;
    -moz-hyphenate-limit-lines: December;
    -ms-hyphenate-limit-lines: December;
    hyphenate-limit-lines: December;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: April;
    -moz-hyphenate-limit-lines: April;
    -ms-hyphenate-limit-lines: April;
    hyphenate-limit-lines: April;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-limit-lines: May;
    -moz-hyphenate-limit-lines: May;
    -ms-hyphenate-limit-lines: May;
    hyphenate-limit-lines: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitLines renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-hyphenate-limit-lines: July;
    -moz-hyphenate-limit-lines: July;
    -ms-hyphenate-limit-lines: July;
    hyphenate-limit-lines: July;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-limit-lines: September;
    -moz-hyphenate-limit-lines: September;
    -ms-hyphenate-limit-lines: September;
    hyphenate-limit-lines: September;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-hyphenate-limit-lines: July;
    -moz-hyphenate-limit-lines: July;
    -ms-hyphenate-limit-lines: July;
    hyphenate-limit-lines: July;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-limit-lines: September;
    -moz-hyphenate-limit-lines: September;
    -ms-hyphenate-limit-lines: September;
    hyphenate-limit-lines: September;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: November;
    -moz-hyphenate-limit-lines: November;
    -ms-hyphenate-limit-lines: November;
    hyphenate-limit-lines: November;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-limit-lines: August;
    -moz-hyphenate-limit-lines: August;
    -ms-hyphenate-limit-lines: August;
    hyphenate-limit-lines: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphenate-limit-lines: January;
    -moz-hyphenate-limit-lines: January;
    -ms-hyphenate-limit-lines: January;
    hyphenate-limit-lines: January;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: December;
    -moz-hyphenate-limit-lines: December;
    -ms-hyphenate-limit-lines: December;
    hyphenate-limit-lines: December;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-limit-lines: April;
    -moz-hyphenate-limit-lines: April;
    -ms-hyphenate-limit-lines: April;
    hyphenate-limit-lines: April;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: May;
    -moz-hyphenate-limit-lines: May;
    -ms-hyphenate-limit-lines: May;
    hyphenate-limit-lines: May;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-limit-lines: June;
    -moz-hyphenate-limit-lines: June;
    -ms-hyphenate-limit-lines: June;
    hyphenate-limit-lines: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-hyphenate-limit-lines: January;
    -moz-hyphenate-limit-lines: January;
    -ms-hyphenate-limit-lines: January;
    hyphenate-limit-lines: January;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: December;
    -moz-hyphenate-limit-lines: December;
    -ms-hyphenate-limit-lines: December;
    hyphenate-limit-lines: December;
  }
}

@media January {
  .c0 {
    -webkit-hyphenate-limit-lines: April;
    -moz-hyphenate-limit-lines: April;
    -ms-hyphenate-limit-lines: April;
    hyphenate-limit-lines: April;
  }
}

@media April {
  .c0 {
    -webkit-hyphenate-limit-lines: May;
    -moz-hyphenate-limit-lines: May;
    -ms-hyphenate-limit-lines: May;
    hyphenate-limit-lines: May;
  }
}

@media June {
  .c0 {
    -webkit-hyphenate-limit-lines: June;
    -moz-hyphenate-limit-lines: June;
    -ms-hyphenate-limit-lines: June;
    hyphenate-limit-lines: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitLines renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-lines: 54881;
  -moz-hyphenate-limit-lines: 54881;
  -ms-hyphenate-limit-lines: 54881;
  hyphenate-limit-lines: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: 54881;
  -moz-hyphenate-limit-lines: 54881;
  -ms-hyphenate-limit-lines: 54881;
  hyphenate-limit-lines: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: 42365;
  -moz-hyphenate-limit-lines: 42365;
  -ms-hyphenate-limit-lines: 42365;
  hyphenate-limit-lines: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: 42365;
  -moz-hyphenate-limit-lines: 42365;
  -ms-hyphenate-limit-lines: 42365;
  hyphenate-limit-lines: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitLines renders string 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-lines: July;
  -moz-hyphenate-limit-lines: July;
  -ms-hyphenate-limit-lines: July;
  hyphenate-limit-lines: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: July;
  -moz-hyphenate-limit-lines: July;
  -ms-hyphenate-limit-lines: July;
  hyphenate-limit-lines: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: June;
  -moz-hyphenate-limit-lines: June;
  -ms-hyphenate-limit-lines: June;
  hyphenate-limit-lines: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: June;
  -moz-hyphenate-limit-lines: June;
  -ms-hyphenate-limit-lines: June;
  hyphenate-limit-lines: June;
}

<div
    className="c0"
  />,
]
`;

exports[`hyphenateLimitLines renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`hyphenateLimitLines renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-hyphenate-limit-lines: DarkSlateBlue;
  -moz-hyphenate-limit-lines: DarkSlateBlue;
  -ms-hyphenate-limit-lines: DarkSlateBlue;
  hyphenate-limit-lines: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: DarkSlateBlue;
  -moz-hyphenate-limit-lines: DarkSlateBlue;
  -ms-hyphenate-limit-lines: DarkSlateBlue;
  hyphenate-limit-lines: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: DarkSlateBlue;
  -moz-hyphenate-limit-lines: DarkSlateBlue;
  -ms-hyphenate-limit-lines: DarkSlateBlue;
  hyphenate-limit-lines: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-hyphenate-limit-lines: DarkSlateBlue;
  -moz-hyphenate-limit-lines: DarkSlateBlue;
  -ms-hyphenate-limit-lines: DarkSlateBlue;
  hyphenate-limit-lines: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
